--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -26,6 +26,13 @@ hr {
   margin: 5px;
 }
 
+.swatch-box {
+  width: 50px;
+  height: 50px;
+  float: left;
+  margin: 1px;
+  }
+
 .center {
   text-align: center;
 }
