created a nested form

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -7,14 +7,14 @@ $light-gray: #e6e6e6;
 $dark-gray: #8a8a8a;
 
 body {
-  background-image: url("bg.gif");
+  // background-image: url("bg.gif");
   color: $default-font-color;
   font-family: $default-font;
 }
 
 h1, h2 {
- font-family: $header-font;
- color: #fff;
+  font-family: $header-font;
+  color: #fff;
 } 
 
 h3, h4 {
@@ -86,6 +86,12 @@ hr {
   padding: 10px; 
   border: 3px solid $light-gray; 
   height: 100%;
+}
+
+.main-title {
+  font-size: 2.5rem; 
+  font-family: $header-font;
+  color: $dark-gray;
 }
 
 //start top bar
