--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
     <!-- off-canvas title bar for 'small' screen -->
     <div class="title-bar" data-responsive-toggle="widemenu" data-responsive-toggle="nav-menu" data-hide-for="medium">
       <div class="title-bar-left">
-        <span class="title-bar-title" style="font-size: 1.5rem;"><%= link_to 'ColorCrush', '/', {:style => "color: #fff"} %></span>
+        <span class="title-bar-title" style="font-size: 1.5rem; font-family: Galada"><%= link_to 'ColorCrush', '/', {:style => "color: #fff"} %></span>
       </div>
       <div class="title-bar-right">
         <span class="title-bar-title">
@@ -129,7 +129,7 @@
       <p class="links">
         <a href="/">Home</a>
         <a href="#">About</a>
-        <a href="#">Faq</a>
+<!--         <a href="#">Faq</a> -->
         <a href="#">Contact</a>
       </p>
       <p class="copywrite">Last Words</p>
