--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -12,7 +12,7 @@
     </div>
 
     <div class="show-for-small-only" style="padding: 10px">
-      <span style="font-size: 2rem">ColorCrush</span> <br>
+      <span class="main-title">ColorCrush</span> <br>
       Blurb stuff here.
       <hr>
     </div>
