--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,3 +1,13 @@
-<% @result.each do |p| %>
-  <p><%= image_tag "#{p['image']['sizes']['Large']['url']}" %></p>
-<% end %>
+<div class="row small-up-1 medium-up-2 large-up-3">
+  <% @result.each do |p| %>
+    <div class="column">
+      <div class="callout product-box">
+        <span class="lead"><%= p['brand']['name'] %></span><br>
+        <%= image_tag "#{p['image']['sizes']['Large']['url']}" %><br>
+        <% p['alternateImages'].each do |a| %>
+          <%= image_tag "#{a['sizes']['Large']['url']}" %>
+        <% end %>
+      </div>
+    </div>
+  <% end %>
+</div>
