--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Profile</h1>
+<p><%= link_to "Add a Product", '/products/new' %></p>
 
 <div class="row small-up-1 medium-up-2 large-up-3">
   <h3><%= link_to 'Traincase', '/traincase' %></h3>
