--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
     
     <div class="hide-for-small-only medium-12 large-12 columns header">
       <div class="header3">      
-        <h1>ColorCrush</h1>
+        <h1 style="color: #fff">ColorCrush</h1>
         <div style="padding: 10px">
           <p class="subheader">Blurb goes here. <br> Blurb blurb blurb.<br> Bluuurb.</p>
         </div>
