--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -101,6 +101,7 @@ function changeColor(number){
   for (i = 0; i < window.palette.length; i++){
     document.getElementById('swatch' + i).style['border'] = 'none';
   };
+  document.getElementById('swatch').style['border'] = 'none';
 
   document.getElementById("red").value = "";
   document.getElementById("green").value = "";
