--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -5,13 +5,13 @@
     <div class="hide-for-small-only medium-12 large-12 columns header">
       <div class="header3">      
         <h1 style="color: #fff">ColorCrush</h1>
-        <div style="padding: 10px">
+        <div style="padding: 1rem">
           <p class="subheader">Blurb goes here. <br> Blurb blurb blurb.<br> Bluuurb.</p>
         </div>
       </div>
     </div>
 
-    <div class="show-for-small-only" style="padding: 10px">
+    <div class="show-for-small-only" style="padding: 1rem">
       <span class="main-title">ColorCrush</span> <br>
       Blurb stuff here.
       <hr>
