--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -117,6 +117,9 @@ function changeColor(number){
 };
 
 function changeDominant(){
+  for (i = 0; i < window.palette.length; i++){
+    document.getElementById('swatch' + i).style['border'] = 'none';
+  };
   document.getElementById('swatch').style['border'] = 'none';
   document.getElementById("red").value = "";
   document.getElementById("green").value = "";
