--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -4,10 +4,11 @@ $default-font: 'Roboto', sans-serif;
 $header-font: 'Quicksand', sans-serif;
 $default-font-color: #0a0a0a;
 $light-gray: #e6e6e6;
+$medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
-$menu-background: #fafafa;
+$menu-background: #F5F5F5;
 $menu-line: #D25A70;
-$accent-color: #FF6D88;
+$accent-color: #FF1744;
 
 body {
   // background-image: url("bg.gif");
@@ -22,6 +23,7 @@ h1, h2 {
 
 h3, h4 {
   font-family: $default-font;
+  color: $accent-color;
 }
 
 hr {
@@ -261,14 +263,17 @@ $logo-margin: - ($logo-width / 2);
   text-align: center;
   font-size: 1.2rem;
   padding: 1rem;
+  -webkit-box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
+  -moz-box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
+  box-shadow: 0px -5px 5px -5px rgba(0,0,0,0.3);
   p {
     &.slogan {
-      color: $default-font-color;
+      color: $dark-gray;
       font-size: 1.8rem;
       margin: 0 0 1rem;
     }
     &.copywrite {
-      color: $default-font-color;
+      color: $dark-gray;
       font-size: 0.875rem;
       margin: 0;
     }
@@ -288,7 +293,7 @@ $logo-margin: - ($logo-width / 2);
     }
   }
   .links a:hover {
-    color: $dark-gray;
+    color: $dark-gray
   }
 }
 //end footer
