--- a/app/views/products/search.html.erb
+++ b/app/views/products/search.html.erb
@@ -1,14 +1,28 @@
+<div class="row">
+  <%= form_tag '/search', method: :get do %>
+
+    Search for makeup:<br>
+    <%= text_field_tag :keyword %>
+    <%= submit_tag 'Search', class: 'button' %>
+
+  <% end %> <br>
+</div>
+
 <div class="row small-up-1 medium-up-2 large-up-3">
   <% @result.each do |p| %>
-    <div class="column">
-      <div class="callout product-box">
-        <span class="lead"><%= p['brand']['name'] %></span><br>
-        <%= p['unbrandedName'] %><br>
-        <% p['colors'].each do |a| %>
-          <%= a['name'] %><br>
-          <%= image_tag "#{a['swatchUrl']}" %><br>
-        <% end %>
+    <% if p['colors'].length > 1 %>    
+      <div class="column">
+        <div class="callout product-box">
+          <span class="lead">
+            <%= p['brand']['name'] %>
+          </span><br>
+          <%= link_to "#{p['unbrandedName']}", "/view-product/#{p['id']}" %><br>
+          <% p['colors'].each do |a| %>
+            <%= a['name'] %><br>
+            <%= image_tag "#{a['swatchUrl']}" %><br>
+          <% end %>
+        </div>
       </div>
-    </div>
+    <% end %>
   <% end %>
 </div>
