--- a/app/views/wishlists/index.html.erb
+++ b/app/views/wishlists/index.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="hide-for-small-only medium-12 large-12 columns header2">
     <div class="header3">
-      <h1>Wishlist</h1>
-      <p class="lead">Products wanted</p>
+      <span class="main-title animated fadeIn">Wishlist</span>
+      <p class="lead animated fadeIn" style="padding: 0 15px">Things I want</p>
     </div>
   </div>
 
   <div class="show-for-small-only small-12 columns">
     <span style="font-size: 2rem">Wishlist</span> <br>
-    <div style="padding: 5px">Products wanted</div>
+    <div style="padding: 5px">Things I want</div>
   </div>
 </div>
 
