--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,12 +1,12 @@
 <div class="row" style="text-align: center">
 
   <p><span class="lead" style="font-size: 2rem"><%= @product.name.upcase %></span> 
-    <br> <%= @product.brand %></p>
+    <br> <%= link_to "#{@product.brand}", "/?search=#{@product.brand}" %></p>
     <%= image_tag @product.image.url(:medium) %><br><br>
     
   <% if user_signed_in? %>
     <div style="text-align: left; width: 15%" class="search-box">
-      <div style="height: 100px; width: 100px; background-color: rgb(<%= @color.red %>, <%= @color.green %>, <%= @color.blue %>)"></div>
+      <div style="height: 50px; width: 180px; background-color: rgb(<%= @color.red %>, <%= @color.green %>, <%= @color.blue %>)"></div> <br>
       <%= form_tag '/wishlist', method: :post do %>
         <%= hidden_field_tag :product_id, @product.id %>
         <%= image_submit_tag('/assets/heart.gif') %> Add to Wishlist<br>
@@ -17,7 +17,7 @@
       <% end %>
     </div>
   <% else %>
-    <div style="height: 100px; width: 100px; float: center; background-color: rgb(<%= @color.red %>, <%= @color.green %>, <%= @color.blue %>)"></div>
+    <div style="height: 20px; width: 100px; float: center; background-color: rgb(<%= @color.red %>, <%= @color.green %>, <%= @color.blue %>)"></div>
     <p><%= link_to 'Sign In', '/users/sign_in' %> to add to Traincase or Wishlist</p>
   <% end %>
 
