--- a/app/views/traincases/index.html.erb
+++ b/app/views/traincases/index.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
   <div class="hide-for-small-only medium-12 large-12 columns header2">
     <div class="header3">
-      <h1>Traincase</h1>
-      <p class="lead">Products owned</p>
+      <span class="main-title animated fadeIn">Traincase</span>
+      <p class="lead animated fadeIn" style="padding: 0 15px">Things I have</p>
     </div>
   </div>
 
   <div class="show-for-small-only small-12 columns">
-    <span style="font-size: 2rem">Traincase</span> <br>
-    <div style="padding: 5px">Products owned</div>
+    <span style="font-size: 2rem; color: #fff">Traincase</span> <br>
+    <div style="padding: 5px">Things I have</div>
   </div>
 </div>
 <br>
